--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content='Welcome to the most serene hotel in West Africa'>
     <meta name='keyword' content="hotel, nigeria, hotel, relaxing">
     <!--importing stylesheet (css file)-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/bac2fb66e6.js" crossorigin="anonymous"></script>
     <title>Hotel JR | Welcome </title>
   </head>
