--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content='Welcome to the most serene hotel in West Africa'>
     <meta name='keyword' content="hotel, nigeria, hotel, relaxing">
     <!--importing stylesheet (css file)-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hotel JR | About </title>
   </head>
 
